<resources>
    <string name="app_name">Send Meal</string>
    <string name="registro_titulo">Registrar Usuario</string>
    <string name="registro_nombre">Nombre:</string>
    <string name="registro_contraseña">Escribe tu contraseña</string>
    <string name="registro_contraseña2">Vuelve a escribir tu contraseña:</string>
    <string name="registro_correo">Ingrese su correo electrónico:</string>
    <string name="registro_tarjeta_credito">Tarjeta de Credito:</string>
    <string name="registro_cuenta">Tipo de cuenta:</string>
    <string name="registro_notificacion_si">Quiero recibir notificaciones en mi correo</string>
    <string name="registro_notificacion_no">No quiero recibir notificaciones en mi correo</string>
    <string name="registro_credito_inicial">Seleccionar Crédito Inicial:</string>
    <string name="registro_vendedor_si">Quiero ser vendedor </string>
    <string name="registro_vendedor_no">No quiero ser vendedor </string>
    <string name="registro_condiciones">Acepto condiciones del servicio</string>
    <string name="registro_alias">Ingrese el alias: </string>
    <string name="registro_cbu">Ingrese su CBU: </string>
    <string name="Bienvenido">Bienvenido </string>
    <string name="menu_opcion1">Registrarme</string>
    <string name="menu_opcion2">Crear un nuevo plato</string>
    <string name="menu_opcion3">Lista de platos</string>
    <string name="menu_opcion4">Crear un pedido</string>
    <string name="menu_opcion5">Ver los pedidos en el mapa</string>
    <string name="registro_titulo_toolbar">Menú Tolbar</string>
    <string name="registro_texto_toolbar">Selecciona una opción</string>
    <string name="registro_titulo_alta">Dar de alta un plato</string>
    <string name="registro_titulo_plato">Titulo del plato: </string>
    <string name="registro_descripcion_plato">Descripción: </string>
    <string name="registro_precio_plato">Precio: </string>
    <string name="registro_caloria_plato">Calorias: </string>
    <string name="btn_guardar">Guardar</string>
    <string name="dialogo_quitar_plato">¿Quiere eliminar este plato?</string>
    <string name="dialogo_confirmar">Quitar</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="nombre_canal">mlr canal</string>
    <string name="descripcion_canal">el canal de nuestras notificaciones</string>
    <string name="menu_buscar">Buscar platos</string>
    <string name="registro_fecha_pedido">Ingrese la fecha del pedido.</string>
    <string name="button_crear_pedido">Crear pedido</string>
    <string name="buton_enviar_pedido">Enviar pedido</string>
    <string name="msg_token">sendmeals</string>
    <string-array name="estados">
        <item>Enviado</item>
        <item>Aceptado</item>
        <item>Rechazado</item>
        <item>En preparacion</item>
        <item>En envio</item>
        <item>Entregado</item>

    </string-array>
</resources>
