<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:id="@+id/lrlayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:textSize="@dimen/titulo"
        android:text="@string/registro_titulo"/>

    <TextView android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:textSize="@dimen/etiquetas"
        android:text="@string/registro_nombre"/>

    <EditText android:id="@+id/ingresoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"/>



    <TextView android:id="@+id/contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:textSize="@dimen/etiquetas"
        android:text="@string/registro_contraseña"/>

    <EditText android:id="@+id/ingresoContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView android:id="@+id/contraseniaR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/etiquetas"
        android:text="@string/registro_contraseña2"/>

    <EditText android:id="@+id/ingresoContraseniaR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>


    <TextView android:id="@+id/correoElectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/etiquetas"
        android:text="@string/registro_correo"/>

    <EditText android:id="@+id/ingresoCorreoElec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>




    <TextView android:id="@+id/tarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/etiquetas"
        android:text="@string/registro_tarjeta_credito"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <EditText
        android:id="@+id/ingresoTarjetaCredito1"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/ingresoTarjetaCredito2"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/ingresoTarjetaCredito3"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:inputType="date" />

</LinearLayout>



<TextView android:id="@+id/cuenta"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:textSize="@dimen/etiquetas"
android:text="@string/registro_cuenta"    />


    <RadioGroup android:id="@+id/tipoCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:orientation="vertical">

        <RadioButton android:id="@+id/btnSeleccionarBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Base"
android:checked="true"/>

        <RadioButton android:id="@+id/btnSeleccionarPremiun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Premiun"/>

        <RadioButton android:id="@+id/btnSeleccionarFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full"/>

    </RadioGroup>

<TextView android:id="@+id/creditoInicial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:text="@string/registro_credito_inicial"/>

<SeekBar android:id="@+id/seleccionarCredito"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:max="1500"/>


<ToggleButton android:id="@+id/btnRecibirCorreo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textOn="@string/registro_notificacion_si"
    android:textOff="@string/registro_notificacion_no"/>


    <TextView android:id="@+id/textoEsVendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/etiquetas"
android:text="Desea ser vendedor: "/>
    <Switch android:id="@+id/btnSerVendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:textOff="@string/registro_vendedor_no"
        android:textOn="@string/registro_vendedor_si"/>
<TextView android:id="@+id/textoAlias"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:textSize="@dimen/etiquetas"
    android:text="@string/registro_alias"
    android:visibility="gone"/>

<EditText android:id="@+id/alias"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:visibility="gone"
    android:inputType="text"/>
<TextView android:id="@+id/textoCBU"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:textSize="@dimen/etiquetas"
    android:text="@string/registro_cbu"
    android:visibility="gone"/>
    <EditText
        android:id="@+id/ingresoCBU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:visibility="gone"
        android:inputType="text"/>

<CheckBox android:id="@+id/btnCheckTerminos"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:text="@string/registro_condiciones"/>

    <Button android:id="@+id/btnRegistrar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:text="Registrar"
android:enabled="false"/>

</LinearLayout>
</ScrollView>